typescript/checker/tests/conformance/es2017/useObjectValuesAndEntries3.ts.stderr
error: NoCallSignature {
    span: Span {
        lo: BytePos(
            122,
        ),
        hi: BytePos(
            130,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es2017/useObjectValuesAndEntries3.ts:9:21
  |
9 | var entries = Object.entries(o);
  |                     ^^^^^^^^

